ant-qtjambi: Exec improve error message output.